--- a/docroot/themes/custom/ucsf/scss/global/_base.scss
+++ b/docroot/themes/custom/ucsf/scss/global/_base.scss
@@ -79,6 +79,12 @@ p {
     margin-right: 10px;
   }
 
+  @-moz-document url-prefix() {
+    &.drop-cap:first-letter {
+      margin-top: .2em;
+    }
+  }
+
   &.small-text {
     font-size: 14px;
     letter-spacing: .3px;
