--- a/docroot/themes/custom/ucsf/scss/node/_article.scss
+++ b/docroot/themes/custom/ucsf/scss/node/_article.scss
@@ -98,6 +98,10 @@
   @include breakpoint($new-small-max) {
     border-top: 1px solid $c-gray-lighter;
     border-bottom: 1px solid $c-gray-lighter;
+    margin-right: 0;
+    margin-left: 0;
+    float: none;
+    width: auto;
   }
 }
 
